# tfs-rust

./: .env  .travis.yml  Cargo.toml  LICENSE  README.md  Rocket.toml
migrations/2018-03-01-155212_create_users/: up.sql
migrations/2018-03-01-160107_create_posts/: up.sql
migrations/2018-03-04-165638_create_pages/: up.sql
migrations/2018-03-04-220849_create_contents/: down.sql  up.sql
src/: README.md  db.rs  helpers.rs  main.rs  metrix.rs  schema.rs
src/handlers/: admin.rs  files.rs  image.rs  index.rs  mod.rs  page.rs  post.rs  user.rs
src/models/: mod.rs  page.rs
static/css/: style.css
static/js/: image.js  markdown-preview.js
templates/: add-post.tera  admin.tera  banner.tera  base.tera  edit-post.tera  header.tera  index.tera  login.tera  markdown-preview.tera  page-content.tera  page-form.tera  page.tera  pages.tera  post.tera  posts.tera  user.tera  users.tera
