[package]
name = "tfs-rust"
version = "0.1.0"
authors = ["haBuu <habuu@habuu.fi>"]

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", default-features = false, features = ["tera_templates"] }
diesel = { version = "1.0", features = ["mysql", "chrono"] }
diesel_migrations = "*"
r2d2-diesel = "1.0"
r2d2 = "0.8"
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest = "0.8.5"
tera = "0.11.5"
pulldown-cmark = { version = "0.1.0", default-features = false }
argon2rs = "*"
rand = "*"
dotenv = "*"